# tutan_gui_agent

./: .gitignore
backend/: README.md  pyproject.toml
backend/tests/: test_ref_system.py
backend/tutan_agent/: gui.py  server.py
backend/tutan_agent/adb/: manager.py
backend/tutan_agent/agents/: base.py  planner.py
backend/tutan_agent/core/: device_controller.py  ref_system.py  scrcpy.py  session_store.py
backend/tutan_agent_nextjs/: .nftignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
backend/tutan_agent_nextjs/docs/: roadmap.md
backend/tutan_agent_nextjs/scripts/: build-safe.mjs  test-adb.mjs
backend/tutan_agent_nextjs/src/app/: globals.css  layout.tsx  page.tsx
backend/tutan_agent_nextjs/src/app/api/agents/action/: route.ts
backend/tutan_agent_nextjs/src/app/api/agents/run/: route.ts
backend/tutan_agent_nextjs/src/app/api/devices/: route.ts
backend/tutan_agent_nextjs/src/app/api/devices/control/: route.ts
backend/tutan_agent_nextjs/src/app/api/health/: route.ts
backend/tutan_agent_nextjs/src/components/: AgentConsole.tsx  DeviceManager.tsx  HistoryPanel.tsx  ScrcpyPlayer.tsx  SettingsPanel.tsx  StyleDebug.tsx
backend/tutan_agent_nextjs/src/lib/: action-executor.ts  adb.ts  agent.ts  client-url.ts  planner.ts  ref-system.ts  scrcpy-manager.ts  xml-parser.ts
backend/tutan_agent_nextjs/src/lib/__tests__/: action-executor.test.ts  agent.test.ts  planner.test.ts  ref-system.test.ts  xml-parser.test.ts
docs/: AutoGLM-GUI_architecture_analysis.md  (+8 more)
(+6 files in other folders)
